--- a/youtrack.services.yml
+++ b/youtrack.services.yml
@@ -2,9 +2,9 @@ services:
   youtrack.connection:
     class: Drupal\youtrack\API\ConnectionManager
     arguments: ['@config.factory']
-  youtrack.projects:
-    class: Drupal\youtrack\API\ProjectsManager
+  youtrack.project:
+    class: Drupal\youtrack\API\ProjectManager
     arguments: ['@youtrack.connection']
-  youtrack.issues:
-    class: Drupal\youtrack\API\IssuesManager
+  youtrack.issue:
+    class: Drupal\youtrack\API\IssueManager
     arguments: ['@youtrack.connection']
